fixing breadcrumb spacing with compressed html

--- a/docs/manual/source/stylesheets/partials/_breadcrumbs.css.scss
+++ b/docs/manual/source/stylesheets/partials/_breadcrumbs.css.scss
@@ -19,7 +19,7 @@
     color: $breadcrumbs-font-color;
   }
   span.spacer {
-    padding: 0 3px 0 3px;
+    padding: 0 8px 0 8px;
     color: $breadcrumbs-spacer-color;
   }
 }
